--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Nice to meet you! I'm Connor.
             </h1>
             <p>
-               Web Devevolper &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Admin
+               <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">Web Devevolper</a> &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Admin
             </p>
         </section>
         <section id="projects">
@@ -177,9 +177,6 @@
             </div>
         </section>
         <footer>
-            <p>
-             
-            </p>
             <p>
                 © Created by
                 <a href="https://www.linkedin.com/in/connorreadnour/" target="_blank">
