--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         </nav>
         <section id="welcome-section">
             <h1>
-                Nice to meet you! I'm Connor.
+                Nice to meet you! I'm Connor Readnour.
             </h1>
             <p>
-               <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">Web Devevolper</a> &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Admin
+               I'm a Web Devevolper&nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Admin
+            </p>
+			<p>
+                <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">Who is certified in Responsive Web Design</a> 
             </p>
         </section>
         <section id="projects">
@@ -155,7 +158,7 @@
         <section class="contact-section" id="contact">
             <div class="contact-section-header">
                 <h2>
-                    Let's work together
+                    Let's work together!
                 </h2>
             </div>
             <div class="contact-links">
