--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Nice to meet you! I'm Connor Readnour.
             </h1>
             <p>
-               I'm a Web Developer &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Admin
+               I'm a Front-End Web Developer &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Administrator
             </p>
 			<p>
                 <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">Who is certified in Responsive Web Design</a> 
