--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                I'm a Front-End Web Developer &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Administrator
             </p>
 			<p>
-                <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">Who is certified in Responsive Web Design</a> 
+                <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">I am also certified in Responsive Web Design</a> 
             </p>
         </section>
         <section id="projects">
