--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 			<p>
                 <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank">I am also certified in Responsive Web Design</a> 
             </p>
+			<p>
+                <a href="https://imgur.com/0X4oNhk" target="_blank">Here's a link to my resume</a> 
+            </p>
         </section>
         <section id="projects">
             <h2 class="projects-section-header">
