--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<span class="code" style="color:white;">
 							{
 						</span>
-						AutoCAD Polylining 1
+						AutoCAD Polylining example 1
 						<span class="code" style="color:white;">
 							}
 						</span>
@@ -154,7 +154,7 @@
 						<span class="code" style="color:white;">
 							{
 						</span>
-						AutoCAD Polylining 1
+						AutoCAD Polylining example 2
 						<span class="code" style="color:white;">
 							}
 						</span>
