--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </section>
         <section id="projects" style="color:white;">
             <h2 class="projects-section-header" style="color:white;">
-                Here is some of my responsive web design work with boostrap
+                Responsive web design examples working with Bootstrap Front-End framework
             </h2>
             <div class="projects-grid">
                 
