--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p style="color:white;">
 			I'm a
 			</p>
-            <p style="color:white;">
+            <p style="color:white; text-align:center;">
                Jr. Front-End Web Developer &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Administrator
             </p>
 			<br>
