--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							}
 						</span>
 					</p>
-                    <img alt="project" class="project-image" src="img/sv5/dateRangePicker.png">
+                    <img alt="project" class="project-image" src="img/sv/dateRangePicker.png">
 					
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
