--- a/index - Copy.html
+++ b/index - Copy.html
@@ -34,7 +34,7 @@
             </h1>
 
             <p style="color:white; text-align:center;">
-               Jr. Front-End Web Developer &nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp IWMS Administrator
+                IWMS Administrator&nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp Jr. Front-End Web Developer
             </p>
 			<br>
                 <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-primary" color="white">
