--- a/index.html
+++ b/index.html
@@ -196,9 +196,12 @@
               { Caterpillar (snake) }
               </a>
 
+            <!-- needs troubleshooting. grid is not aligned -->
+            <!--
               <a href="whack-a-mole/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
               { Whack-a-mole! }
               </a>
+            -->
             </div>
         </section>
         <section class="contact-section" id="contact">
