--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </h1>
 
             <p style="color:white; text-align:center;">
-                IWMS Administrator&nbsp / &nbsp CAD & CAFM specialist &nbsp / &nbsp Jr. Front-End Web Developer
+                IWMS Admin&nbsp& CAD specialist &nbsp / &nbsp Frontend Web Developer
             </p>
 			<br>
                 <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-primary" color="white">
