--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               </a>
 
               <a href="snake/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
-              { Caterpillar (snake) }
+              { Snake }
               </a>
 
             <!-- needs troubleshooting. grid is not aligned -->
