--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </h1>
 
             <p style="color:white; text-align:center;">
-                IWMS Admin&nbsp& CAD specialist &nbsp / &nbsp Frontend Web Developer
+                IWMS Admin&nbsp& CAD specialist &nbsp / &nbsp Front-End Web Developer
             </p>
 			<br>
                 <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-primary" color="white">
@@ -184,7 +184,7 @@
 
             <!--Start of Games -->
       			<h2 class="projects-section-header" style="color:white;">
-              Some simple games I have developed
+              Some basic games I have developed while learning JavaScript
             </h2>
 
             <div class="projects-grid">
@@ -193,7 +193,7 @@
               </a>
 
               <a href="snake/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
-              { Snake }
+              { Caterpillar }
               </a>
 
             <!-- needs troubleshooting. grid is not aligned -->
