--- a/index - Copy.html
+++ b/index - Copy.html
@@ -192,7 +192,7 @@
 
             <!--Start of Games -->
       			<h2 class="projects-section-header" style="color:white;">
-              Some basic games I have developed while learning JavaScript
+              Web development projects & some basic games I developed while learning JavaScript
             </h2>
 
             <div class="projects-grid">
@@ -204,6 +204,9 @@
               { Caterpillar }
               </a>
 
+              <a href="tribute-page/tribute.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
+              { freeCodeCamp's Tribute Page }
+              </a>
             <!-- needs troubleshooting. grid is not aligned -->
             <!--
               <a href="whack-a-mole/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
