--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <!--Start of Games -->
       			<h2 class="projects-section-header" style="color:white;">
-              Web development projects & some basic games I developed while learning JavaScript
+              Web development projects & some basic games I created while learning JavaScript
             </h2>
 
             <div class="projects-grid">
