--- a/index - Copy.html
+++ b/index - Copy.html
@@ -102,7 +102,7 @@
 							}
 						</span>
 					</p>
-                    <img alt="project" class="project-image" src="img/start.png">
+                    <img alt="project" class="project-image" src="img/teamSpaceUpgrade.png">
 
 
             </div>
