--- a/index - Copy.html
+++ b/index - Copy.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-            <link href="style.css" rel="stylesheet" type="text/css">
-        </meta>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link href="style.css" rel="stylesheet" type="text/css">
+		  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
 
+    @-webkit-keyframes zoom {
+      from {-webkit-transform:scale(0)}
+      to {-webkit-transform:scale(1)}
+    }
+
+    @keyframes zoom {
+      from {transform:scale(0)}
+      to {transform:scale(1)}
+    }
+
+    /* The Close Button */
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #f1f1f1;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #bbb;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    nav {
+      height: 50px;
+    }
+    </style>
     </head>
     <body>
         <nav class="nav" id="navbar">
-            <ul class="nav-list">
+            <ul class="nav-list" style="height: 20px">
                 <li>
                     <a href="#welcome-section">
                         About
@@ -27,32 +61,30 @@
                 </li>
             </ul>
         </nav>
+        <!--Start of About section -->
         <section id="welcome-section">
             <h1 style="color:white;">
                 Nice to meet you! I'm Connor Readnour.
             </h1>
 
             <p style="color:white; text-align:center;">
-                IWMS Administrator  &nbsp /  &nbsp  CAD &nbsp / &nbsp Front-End Web Development
+                Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
             </p>
 			  <br>
             <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-primary" color="white">
         		{ I am also certified in Responsive Web Design }
         		</a>
 				<br>
+
         <!-- Resume header-->
         <h4 class="projects-section-header" style="color:white;">My Resume</h4>
-        <img id="myImg" src="img/resume.jpg" alt="Resume" style="width:100%;max-width:300px">
+        <img id="myImg" src="img/resume/resume.png" alt="Resume" style="width:90%; height:auto; max-width: 750px;">
 
-        <!-- The Resume Modal -->
-        <div id="myModal" class="modal">
-          <span class="close" style="color:white;">&times;</span>
-            <img class="modal-content" id="img01">
-          <div id="caption"></div>
-        </div>
+
 
         </section>
-		<!--Start of Boostrap work -->
+        <!--End of About section -->
+        <!--Start of Boostrap work -->
         <section id="projects" style="background-color: color:white;">
             <h2 class="projects-section-header" style="color:white;">
                 Bootstrap Front-End framework examples
@@ -267,5 +299,8 @@
       modal.style.display = "none";
     }
     </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
