--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <!-- Resume header-->
         <h4 class="projects-section-header" style="color:white;">My Resume</h4>
-        <img id="myImg" src="img/resume/resume.png" alt="Resume" style="width:90%; height:auto; max-width: 750px;">
+          <img id="myImg" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 750px;">
 
 
 
