--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
 				<br>
 
         <!-- Resume header-->
-        <h4 class="projects-section-header" style="color:white;">My Resume</h4>
-          <img id="myImg" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 750px;">
+        <h4 class="projects-section-header" style="color:white;">My Resume (hover to view)</h4>
+        <div class="zoom" style="text-align: center;">
+          <img id="myImg" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 500px;">
+        </div>
 
 
 
