--- a/index - Copy.html
+++ b/index - Copy.html
@@ -7,57 +7,22 @@
       <link href="style.css" rel="stylesheet" type="text/css">
 		  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
-
-    @-webkit-keyframes zoom {
-      from {-webkit-transform:scale(0)}
-      to {-webkit-transform:scale(1)}
-    }
-
-    @keyframes zoom {
-      from {transform:scale(0)}
-      to {transform:scale(1)}
-    }
-
-    /* The Close Button */
-    .close {
-      position: absolute;
-      top: 15px;
-      right: 35px;
-      color: #f1f1f1;
-      font-size: 40px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: #bbb;
-      text-decoration: none;
-      cursor: pointer;
-    }
-
-    nav {
-      height: 50px;
-    }
+      nav {
+        height: 50px;
+      }
     </style>
     </head>
     <body>
         <nav class="nav" id="navbar">
             <ul class="nav-list" style="height: 20px">
                 <li>
-                    <a href="#welcome-section">
-                        About
-                    </a>
+                    <a href="#welcome-section">About</a>
                 </li>
                 <li>
-                    <a href="#projects">
-                        Work
-                    </a>
+                    <a href="#projects">Work</a>
                 </li>
                 <li>
-                    <a href="#contact">
-                        Contact
-                    </a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -66,7 +31,6 @@
             <h1 style="color:white;">
                 Nice to meet you! I'm Connor Readnour.
             </h1>
-
             <p style="color:white; text-align:center;">
                 Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
             </p>
@@ -76,7 +40,7 @@
         		</a>
 				<br>
         <!-- Resume header-->
-        <h4 class="projects-section-header" style="color:white;">My Resume (hover to view)</h4>
+        <h4 class="projects-section-header" style="color:white;">My Resume</h4>
         <div class="zoom" style="text-align: center;">
           <img id="myImg" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 500px;">
         </div>
@@ -131,7 +95,6 @@
         </div>
             <br />
             <br />
-
 			<!--Start of CAD/CAFM work -->
 			<h2 class="projects-section-header" style="color:white;">
         Here is some of my CAD / IWMS / Other work
@@ -204,7 +167,6 @@
       			<h2 class="projects-section-header" style="color:white;">
               Web development projects & some basic games I created while learning JavaScript
             </h2>
-
             <div class="projects-grid">
               <a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
               { Rock Paper Scissors }
