--- a/index - Copy.html
+++ b/index - Copy.html
@@ -46,7 +46,7 @@
 					</h4>
 					
 					<h6 class="projects-section-header " style="color:white;">
-						<a href="connor_readnour_resume.pdf" target="_blank">Click for PDF</a>
+						<a href="Connor_Readnour_Resume.pdf" target="_blank">Click for PDF</a>
 					</h6>
 		
         
