--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <br />
             <!--Start of Games -->
       			<h2 class="projects-section-header" style="color:white;">
-              Web development projects & some basic games I've created while learning JavaScript
+              Side Projects
             </h2>
             <div class="projects-grid">
 						
