--- a/index - Copy.html
+++ b/index - Copy.html
@@ -59,7 +59,7 @@
         <!--Start of Boostrap work -->
         <section id="projects" style="background-color: color:white;">
             <h2 class="projects-section-header" style="color:white;">
-                Bootstrap Front-End framework examples
+                Bootstrap examples
             </h2>
         <div class="projects-grid">
 					<p class="project-title" style="color:white;">
