--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li>
                     <a href="#projects">Work</a>
                 </li>
+								<li>
+                    <a href="#side-projects">Side&nbsp;Projects</a>
+                </li>
                 <li>
                     <a href="#contact">Contact</a>
                 </li>
@@ -55,8 +58,8 @@
         </div>
 				
         </section>
-        <!--End of About section -->
-        <!--Start of Boostrap work -->
+       <!--End of About section -->
+       <!--Start of Boostrap work -->
         <section id="projects" style="background-color: color:white;">
             <h2 class="projects-section-header" style="color:white;">
                 Bootstrap examples
@@ -105,10 +108,11 @@
         </div>
             <br />
             <br />
+			<!--End of Boostrap work -->
 			<!--Start of CAD/CAFM work -->
-			<h2 class="projects-section-header" style="color:white;">
-        Here is some of my CAD / IWMS / Other work
-      </h2>
+				<h2 class="projects-section-header" style="color:white;">
+					Here is some of my CAD / IWMS / Other work
+				</h2>
         <div class="projects-grid">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
@@ -170,13 +174,18 @@
 						</span>
 					</p>
             <img alt="project" class="project-image" src="img/aq.PNG">
-        </div>
-            <br />
-            <br />
-            <!--Start of Games -->
+					</div>
+				<!-- End of CAD/CAFM work  -->
+        <!--Start of Side Proejects -->
+					<div  id="side-projects">
+					<br />
+          <br />
+					<br />
+          <br />
       			<h2 class="projects-section-header" style="color:white;">
               Side Projects
             </h2>
+					</div>
             <div class="projects-grid">
 						
 							<a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-primary" color="white" style="margin-top: 20px;">
