--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</h4>
 					
 					<h6 class="projects-section-header " style="color:white;">
-						<a href="Connor_Readnour_Resume.pdf" target="_blank">Click for PDF</a>
+						<a href="Connor_Readnour_Resume.pdf" target="_blank">Click here for PDF</a>
 					</h6>
 		
         
