--- a/index - Copy.html
+++ b/index - Copy.html
@@ -74,7 +74,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/teamSpaceScenario.png">
+            <img alt="project" class="project-image img-thumbnail" src="img/teamSpaceScenario.png">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -84,7 +84,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/teamSpaceModal.png">
+            <img alt="project" class="project-image img-thumbnail" src="img/teamSpaceModal.png">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -94,7 +94,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/dateRangePicker.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/dateRangePicker.PNG">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -104,7 +104,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/teamSpaceUpgrade.png">
+            <img alt="project" class="project-image img-thumbnail" src="img/teamSpaceUpgrade.png">
         </div>
             <br />
             <br />
@@ -123,7 +123,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/plines.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/plines.PNG">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -133,7 +133,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/plines2.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/plines2.PNG">
 					<p class="project-title" style="color:white;" >
 						<span class="code" style="color:white;">
 							{
@@ -143,7 +143,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/getting_started_sheet.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/getting_started_sheet.PNG">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -153,7 +153,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/getting_started_01.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/getting_started_01.PNG">
 					<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -163,7 +163,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/exceldc.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/exceldc.PNG">
         	<p class="project-title" style="color:white;">
 						<span class="code" style="color:white;">
 							{
@@ -173,7 +173,7 @@
 							}
 						</span>
 					</p>
-            <img alt="project" class="project-image" src="img/aq.PNG">
+            <img alt="project" class="project-image img-thumbnail" src="img/aq.PNG">
 					</div>
 				<!-- End of CAD/CAFM work  -->
         <!--Start of Side Proejects -->
