--- a/index - Copy.html
+++ b/index - Copy.html
@@ -69,7 +69,7 @@
 						<span class="code" style="color:white;">
 							{
 						</span>
-						Data Table, side bar, room selector
+						Data Table, Side Nav Bar, Room Selector
 						<span class="code" style="color:white;">
 							}
 						</span>
@@ -79,7 +79,7 @@
 						<span class="code" style="color:white;">
 							{
 						</span>
-						Modal with highlight picker
+						Modal with Highlight Picker
 						<span class="code" style="color:white;">
 							}
 						</span>
@@ -168,7 +168,7 @@
 						<span class="code" style="color:white;">
 							{
 						</span>
-						Monterrey Bay Aquarium Security Asset Project, from annual company presentation
+						Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation
 						<span class="code" style="color:white;">
 							}
 						</span>
