--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--Start of About section -->
         <section id="welcome-section">
 						<div style="text-align: center;" class="zoom"> <!--- add class="zoom" to get 1.5x zoom effect-->
-							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="Resume" style="width:90%; height:auto; max-width: 200px;">
+							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:90%; height:auto; max-width: 200px;">
 						</div>
             <h1 style="color:white;">
                 Connor Readnour
