--- a/index - Copy.html
+++ b/index - Copy.html
@@ -41,7 +41,7 @@
                 Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
             </p>
 			  <br>
-            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-primary" color="white">
+            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-danger" color="white">
         		{&nbsp;Certified Responsive Web Design Developer&nbsp;}
         		</a>
 				<br>
