--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#welcome-section">About</a>
                 </li>
                 <li>
-                    <a href="#projects">Work</a>
+                    <a href="#projects">Work&nbsp;Examples</a>
                 </li>
 								<li>
                     <a href="#side-projects">Side&nbsp;Projects</a>
