--- a/index - Copy.html
+++ b/index - Copy.html
@@ -6,7 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link href="style.css" rel="stylesheet" type="text/css">
 		  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+		<style>
       nav {
         height: 50px;
       }
@@ -173,19 +174,13 @@
             </div>
             <div class="contact-links">
                 <a style="color:white;" class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/" id="profile-link" target="_blank">
-                    <i class="fab fa-github">
-                    </i>
-                    Linkedin
+                    Linkedin&nbsp;<i style="font-size:24px" class="fa">&#xf2b5;</i>
                 </a>
                 <a class="btn contact-details" href="mailto:connorreadnour@gmail.com">
-                    <i class="fas fa-at">
-                    </i>
-                    Email
+										Email&nbsp;<i style="font-size:24px" class="fa">&#xf003;</i>
                 </a>
                 <a class="btn contact-details" href="tel:630-639-6677">
-                    <i class="fas fa-mobile-alt">
-                    </i>
-                    Call me
+                    Call me&nbsp;<i style="font-size:24px" class="fa">&#xf10b;</i>
                 </a>
             </div>
         </section>
