--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         height: 50px;
       }
     </style>
+		<title>Connor Readnour Portfolio</title>
     </head>
     <body>
         <nav class="nav" id="navbar">
