--- a/index - Copy.html
+++ b/index - Copy.html
@@ -193,5 +193,26 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		<script>
+			// Scroll to specific values
+			// scrollTo is the same
+			window.scroll({
+				top: 0, 
+				left: 0, 
+				behavior: 'smooth'
+			});
+
+			// Scroll certain amounts from current position 
+			window.scrollBy({ 
+				top: 0, // could be negative value
+				left: 0, 
+				behavior: 'smooth' 
+			});
+
+			// Scroll to a certain element
+			document.querySelector('.hello').scrollIntoView({ 
+				behavior: 'smooth' 
+			});
+		</script>
 		</body>
 </html>
