--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a href="#welcome-section">About</a>
                 </li>
                 <li>
-                    <a href="#projects">Work&nbsp;Examples</a>
+                    <a href="#projects">Work</a>
                 </li>
 								<li>
-                    <a href="#side-projects">Side&nbsp;Projects</a>
+                    <a href="#side-projects">Projects</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
