--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
               {&nbsp;Example Website&nbsp;}
               </a>
 							
+							<a href="imageGallery/index.html" target="_blank" class="btn btn-info btn-lg zoom3" color="white" style="margin-top: 20px;">
+              {&nbsp;CSS FlexBox Image Gallery&nbsp;}
+              </a>
+							
 							<a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-warning btn-lg zoom3" color="white" style="margin-top: 20px;">
               {&nbsp;Rock Paper Scissors&nbsp;}
               </a>
