--- a/index.html
+++ b/index.html
@@ -71,22 +71,19 @@
             </h2>
         <div class="projects-grid">
 					
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/teamSpaceScenario.png">
-					<p class="project-title zoom2" style="color:white; display: inline-block" >
+            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/teamSpaceScenario.png">
+					<p class="project-title zoom2" style="color:white; display: inline-block;" >
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/teamSpaceModal.png">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
-						&#123;&nbsp;Date Range Picker&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/dateRangePicker.PNG">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/dateRangePicker.PNG">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/teamSpaceUpgrade.png">
+            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
+						
         </div>
             <br />
             <br />
@@ -96,27 +93,27 @@
 					Here is some of my CAD / IWMS / Other work
 				</h2>
         <div class="projects-grid">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 1&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/plines.PNG">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 2&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/plines2.PNG">
-					<p class="project-title zoom2" style="color:white; display: inline-block" >
+					<p class="project-title zoom2" style="color:white; display: inline-block;" >
 						&#123;&nbsp;Revit Basic Home Model 1&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/getting_started_sheet.PNG">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;Revit Basic Home Model 2&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/getting_started_01.PNG">
-					<p class="project-title zoom2" style="color:white; display: inline-block">
+					<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;Excel Direct Connect Report&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/exceldc.PNG">
-        	<p class="project-title zoom2" style="color:white; display: inline-block">
+        	<p class="project-title zoom2" style="color:white; display: inline-block;">
 						&#123;&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoom2" src="img/aq.PNG">
