--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>Example Website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
