--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
             </p>
 			  <br>
-            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-danger" color="white">
+            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-dark" color="white">
         		{&nbsp;Certified Responsive Web Design Developer&nbsp;}
         		</a>
 				<br>
@@ -74,15 +74,15 @@
 					<p class="project-title" style="color:white; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/teamSpaceScenario.png">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.png">
 					<p class="project-title " style="color:white; display: inline-block;" >
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/dateRangePicker.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/dateRangePicker.PNG">
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
 						
         </div>
             <br />
@@ -96,27 +96,27 @@
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 1&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/plines.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines.PNG">
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 2&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/plines2.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines2.PNG">
 					<p class="project-title " style="color:white; display: inline-block;" >
 						&#123;&nbsp;Revit Basic Home Model 1&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/getting_started_sheet.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_sheet.PNG">
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;Revit Basic Home Model 2&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/getting_started_01.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_01.PNG">
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;Excel Direct Connect Report&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/exceldc.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/exceldc.PNG">
         	<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoom2" src="img/aq.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/aq.PNG">
 					</div>
 				<!-- End of CAD/CAFM work  -->
         <!--Start of Side Proejects -->
