--- a/index - Copy.html
+++ b/index - Copy.html
@@ -65,7 +65,7 @@
         </section>
        <!--End of About section -->
        <!--Start of Boostrap work -->
-        <section id="projects" style="background-color: color:white;">
+        <section id="projects" style="background-color:white;">
             <h2 class="projects-section-header" style="color:white;">
                 Bootstrap examples
             </h2>
@@ -74,7 +74,7 @@
 					<p class="project-title" style="color:white; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.png">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
 					<p class="project-title " style="color:white; display: inline-block;" >
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
