--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 					<p class="project-title" style="color:white; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.PNG">
+
 					<p class="project-title " style="color:white; display: inline-block;" >
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/dateRangePicker.PNG">
+            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
+
 					<p class="project-title " style="color:white; display: inline-block;">
 						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
 					</p>
