--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link href="style.css" rel="stylesheet" type="text/css">
 		  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+      
     <style>
       nav {
         height: 50px;
@@ -160,6 +161,10 @@
 							<a href="imageGallery/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin-top: 20px;">
               {&nbsp;CSS FlexBox Image Gallery&nbsp;}
               </a>
+
+              <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin-top: 20px;">
+                {&nbsp;CSS LESS Project&nbsp;}
+                </a>
 							
 							<a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin-top: 20px;">
               {&nbsp;Rock Paper Scissors&nbsp;}
