--- a/lessSandbox/index.html
+++ b/lessSandbox/index.html
@@ -18,5 +18,12 @@
             <li><a href="#">Link 2</a></li>
             <li><a href="#">Link 3</a></li>
         </ul>
+
+        <footer>
+            <p>
+                © Created by Connor Readnour
+            </p>
+        </footer>
+
     </body>
 </html>
